# filmprint

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  keyword_themes_backup.json  main.py  pyproject.toml  railway.toml  requirements.txt
.claude/: settings.json
.github/workflows/: ci.yml  db-backup.yml  scheduled-deploy.yml
api/: main.py  server.py
filmprint/: app.py  cache.py  catalog.py  cli.py  common_thread.py  crossword.py  db.py  discovery.py  email.py  features.py  focus_pull.py  letterboxd.py  omdb.py  opentdb.py  profile.py  recommender.py  six_degrees.py  sync.py  themes.py  tmdb.py  trifecta.py  trivia.py
filmprint.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
mobile/: .env.example  .gitignore  app.json  eas.json  package-lock.json  package.json
mobile/patches/: react-native-screens+4.25.2.patch
scripts/: backfill_movie_credits.py  backfill_omdb_scores.py  backfill_tmdb_catalog.py  backfill_trivia_questions.py  export_onnx.py  export_trivia_source_movies.py  generate_crossword.py  generate_daily_puzzle.py  import_claude_trivia_questions.py  manual_import.py  migrate_sqlite_to_postgres.py  nightly_sync.py  refresh.py  restore_movies_from_cache.py  trivia_question_prompt.md  validate_fp16.py  validate_onnx.py  validate_tokenizer.py
tests/: conftest.py  test_db.py  test_features.py  test_profile.py
web/: .env.local.example  middleware.ts  next.config.ts  package-lock.json  package.json  proxy.ts
web/app/: globals.css  layout.tsx  opengraph-image.tsx  page.tsx
web/components/: Avatar.tsx  (+20 more)
(+83 files in other folders)
