[project]
name = "filmprint"
version = "0.1.0"
requires-python = ">=3.12"

[project.scripts]
filmprint = "filmprint.app:main"
filmprint-refresh = "scripts.refresh:refresh"

[tool.setuptools.packages.find]
include = ["filmprint*"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
